--- a/package.json
+++ b/package.json
@@ -5,16 +5,24 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "Jest"
+    "test": "Jest",
+    "seed": "node seeds/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.20.1"
+  },
+  "devDependencies": {
+    "hest": "^1.0.5",
+    "jest": "^28.1.1"
   }
 }
